
-------------------------------------------------------

> Mod: Advanced Creative 2 (act)
> Author(s): ATE47
> Minecraft version(s): 1.8.9->1.19.3

-------------------------------------------------------
--------------- ACT 2.7.2 -- (MC1.19.3) ---------------
-------------------------------------------------------

- update lightness of a light item

-------------------------------------------------------
--------------- ACT 2.7.1 -- (MC1.19.3) ---------------
-------------------------------------------------------

- update to 1.19.3
- display color in tooltip

-------------------------------------------------------
--------------- ACT 2.7.0 -- (MC1.19.2) ---------------
-------------------------------------------------------

- update to 1.19.2
- remove air from the creative tab

-------------------------------------------------------
--------------- ACT 2.6.2 -- (MC1.18.1) ---------------
-------------------------------------------------------

- fix bug with picker texture registering #16

-------------------------------------------------------
--------------- ACT 2.6.1 -- (MC1.18.1) ---------------
-------------------------------------------------------

- fix bug with container rendering

-------------------------------------------------------
--------------- ACT 2.6.0 -- (MC1.17.1) ---------------
-------------------------------------------------------

- add inventory editor

-------------------------------------------------------
--------------- ACT 2.5.0 -- (MC1.17.1) ---------------
-------------------------------------------------------

- Integrate spectator tp into act /act sptp <username>
- add /act color command to change color data of an item
- add /act unbreakable [true|false] command to set an item unbreakable
- add /act palette to get a palette of color

-------------------------------------------------------
--------------- ACT 2.4.0 -- (MC1.17.1) ---------------
-------------------------------------------------------
