@@ -6,12 +6,14 @@ buildscript {
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
+        classpath 'org.spongepowered:mixingradle:0.7.+'
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
+apply plugin: 'org.spongepowered.mixin'
 
 version = "2.7.2"
 project.ext.minecraft_version = "1.19.3"
@@ -27,8 +29,14 @@ java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 
+mixin {
+    add sourceSets.main, "mixins.act.refmap.json"
+    config 'act.mixins.json'
+}
+
 dependencies {
     minecraft "net.minecraftforge:forge:${project.ext.minecraft_version}-${project.ext.minecraft_forge_rev}"
+    annotationProcessor 'org.spongepowered:mixin:0.8.4:processor'
 }
 
 minecraft {
@@ -83,6 +91,7 @@ jar {
             "Specification-Vendor": "ATE47",
             "Specification-Version": "1", // We are version 1 of ourselves
             "Implementation-Title": project.name,
+            "MixinConfigs": "act.mixins.json",
             "Implementation-Version": "${project.version}",
             "Implementation-Vendor" :"ATE47",
             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
