@@ -1,0 +1,15 @@
+{
+  "required": true,
+  "minVersion": "0.8",
+  "package": "fr.atesab.act.mixin",
+  "compatibilityLevel": "JAVA_8",
+  "mixins": [],
+  "refmap": "mixins.act.refmap.json",
+  "client": [
+    "MinecraftMixin",
+    "MultiPlayerGameModeMixin"
+  ],
+  "injectors": {
+    "defaultRequire": 1
+  }
+}
